# bakky

./: .env_settings  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.gitlab/issue_template/: bug.md  task.md
Docker/: ci.dockerfile  db.dockerfile  prefect.dockerfile  python.dockerfile
app/core/: config.py
app/core/settings/: database.py  logger.py  mongo.py  redis.py
app/domain/models/: base.py
app/domain/schemas/: types.py
app/infrastructure/celery/: engine.py  manager.py
app/infrastructure/mongo/: data.py  engine.py
app/infrastructure/redis/: cache.py  keybuilder.py  redis.py
app/infrastructure/relational/: data.py  engine.py  initialize.py  orm.py  utils.py
app/interfaces/api/: base.py
docs/: hexagonal-architecture.md
tests/core/: test_config.py
tests/infrastructure/: test_mongo.py
